--- a/css/main.scss
+++ b/css/main.scss
@@ -5,156 +5,4 @@
 $primary-color: #FF2D55;
 $line-height: 1.8125rem;
 
-/* ==========================================================================
-   Base
-   ========================================================================== */
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  font-family: Hind, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 1.125rem;
-  font-weight: 300;
-  line-height: $line-height;
-  color: #1F1F21;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: $line-height;
-}
-
-a {
-  color: $primary-color;
-}
-
-h1,
-h2,
-h3 {
-  margin-top: 0;
-  margin-bottom: $line-height;
-  font-family: Montserrat, sans-serif;
-  font-weight: 300;
-}
-
-.main {
-  flex-grow: 1;
-}
-
-/* ==========================================================================
-  Home
-  ========================================================================== */
-.home {
-  background:
-    linear-gradient(rgba(31, 31, 33, .9), rgba(31, 31, 33, .9)),
-    url(../images/bg.jpg) center;
-  background-size: cover;
-  color: $primary-color;
-
-  .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: $line-height;
-    text-align: center;
-  }
-}
-
-.site-logo {
-  width: 200px;
-  margin: 0 auto;
-}
-
-.site-name {
-  font-size: 3.1875rem;
-  line-height: $line-height * 3;
-  text-transform: uppercase;
-  letter-spacing: 12.5px;
-  margin-right: -12.5px;
-}
-
-.site-action {
-  font-size: 1.5625rem;;
-  line-height: $line-height;
-}
-
-.site-action-link {
-  display: inline-block;
-  padding: ($line-height / 2) 1em;
-  border-radius: 4px;
-  text-decoration: none;
-  background: $primary-color;
-  color: #FFF;
-}
-
-.site-about {
-  color: #C7C7CC;
-}
-
-.site-footer {
-  text-align: center;
-  color: #FFF;
-
-  p {
-    margin: ($line-height / 2) 0;
-  }
-}
-
-/* ==========================================================================
-  Navbar
-  ========================================================================== */
-.navbar {
-  display: flex;
-  margin-bottom: $line-height * 2;
-  background: #1F1F21;
-  border-bottom: 3px solid $primary-color;
-}
-
-.navbar-item {
-  text-decoration: none;
-}
-
-.navbar-logo {
-  margin-right: auto;
-  margin-left: $line-height / 2;
-  padding: 14px 1em 0;
-  line-height: 1;
-  background: $primary-color;
-
-  svg {
-    height: 58px;
-    width: auto;
-
-    path { fill: white; }
-  }
-}
-
-.navbar-action {
-  display: inline-block;
-  padding: ($line-height / 2) 1em;
-  margin: $line-height / 2;
-  border-radius: 2px;
-  background: $primary-color;
-  color: #FFF;
-}
-
-/* ==========================================================================
-  Layout
-  ========================================================================== */
-.container {
-  max-width: 900px;
-  padding-right: 1em;
-  padding-left: 1em;
-  margin: 0 auto;
-}
-
-/* ==========================================================================
-  Page
-  ========================================================================== */
-.page {
-  .site-footer {
-    margin-top: $line-height * 2;
-    border-top: 3px solid $primary-color;
-    background: #1F1F21;
-  }
-}
+@import 'base', 'modules/home';
