--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,7 @@
+<h2>Tocaki</h2>
+<p>&copy; 2016 Tocaki [<a href="mailto: {{ site.email }}">{{ site.email }}</a>]</p>
 
+<p>
+  Facebook
+  Instagram
+</p>
