--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,6 @@
-
+<header>
+  <nav>
+    <a href="#">{{ site.title }}</a>
+    <a href="#">Busque entre mais de 40 profissionais</a>
+  </nav>
+</header>
