--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
   <meta name="description" content="{{ site.description }}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <script type="text/javascript" src="{{ "/javascript/svgxuse.min.js" }}"></script>
 </head>
