--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,3 @@
 <header>
-  <nav>
-    <a href="#">{{ site.title }}</a>
-    <a href="#">Busque entre mais de 40 profissionais</a>
-  </nav>
+  {% include navbar.html %}
 </header>
