--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<footer class="bg-inverse p-y-3">
+<footer class="bg-inverse text-muted p-y-3">
   <div class="container">
-    <h2>{{ site.title }}</h2>
-    <p>&copy; 2016 {{ site.title }} [<a href="mailto: {{ site.email }}">{{ site.email }}</a>]</p>
-    <p class="h3">
+    <h2 class="display-2">{% include icon.html i="tocaki-fill" %}<span class="sr-only">{{ site.title }}</span></h2>
+    <p>&copy; 2016 {{ site.title }} &mdash; <a href="mailto: {{ site.email }}">{{ site.email }}</a></p>
+    <p class="h2">
       <a href="{{ site.facebook | prepend: "https://facebook.com/" }}" target="_blank" class="text-deco-none">
         {% include icon.html i="facebook-fill" %}
         <span class="sr-only">Facebook</span>
