--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,4 @@
 <nav class="navbar">
-  <a href="{{ "/" | site.baseurl }}" class="navbar-brand">
-    {% include icon.html i="tocaki-fill" %}
-    <span class="sr-only">{{ site.title }}</span>
-  </a>
+  <a href="{{ "/" | site.baseurl }}" class="navbar-brand">{% include tocaki-logo.html %}</a>
   <a href="#" class="btn btn-outline-primary pull-xs-right">Mais de 40 profissionais</a>
 </nav>
