--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar navbar-absolute navbar-full">
   <a href="{{ "/" | site.baseurl }}" class="navbar-brand">{% include tocaki-logo.html %}</a>
   <a href="#" class="btn btn-outline-primary pull-xs-right">Mais de 40 profissionais</a>
 </nav>
