--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<footer class="bg-inverse text-muted p-y-3">
+<footer class="site-footer bg-inverse bg-cover-fixed text-xs-center p-y-5">
   <div class="container">
     <h2 class="display-2">{% include tocaki-logo.html %}</h2>
     <p>&copy; 2016 {{ site.title }} &mdash; <a href="mailto: {{ site.email }}">{{ site.email }}</a></p>
-    <p class="h2">
+    <p class="h2 m-b-0">
       <a href="{{ site.facebook | prepend: "https://facebook.com/" }}" target="_blank" class="text-deco-none">
         {% include icon.html i="facebook-fill" %}
         <span class="sr-only">Facebook</span>
