Add artists index and artist card

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
-<!-- <header>
-  {% include navbar.html %}
-</header> -->
+{% if page.url != '/' %}
+  <header>
+    {% include navbar.html %}
+  </header>
+{% endif %}
