--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,3 @@
-<nav class="navbar navbar-absolute navbar-full">
-  <a href="{{ "/" | site.baseurl }}" class="navbar-brand">{% include tocaki-logo.html %}</a>
-  <a href="#" class="btn btn-outline-primary pull-xs-right">Mais de 40 profissionais</a>
+<nav class="navbar navbar-dark navbar-full bg-inverse text-xs-center">
+  <a href="{{ "/" | site.baseurl }}" class="h1 m-b-0">{% include tocaki-logo.html %}</a>
 </nav>
