Improve artist cards

--- a/_includes/artist-card.html
+++ b/_includes/artist-card.html
@@ -1,12 +1,13 @@
+{% assign artist = include.artist %}
 <div class="artist-card">
   <a href="{{ artist.url }}">
     <img class="artist-card-img img-fluid" src="{{ artist.slug | append: ".jpg" | prepend: "/images/artists/" | prepend: site.baseurl }}" alt="{{ artist.name }}">
     <span class="artist-card-name text-xs-center m-b-0 p-y-1">{{ artist.name }}</span>
   </a>
-  <span class="artist-card-badge bg-genre-1">
-    {% include icon.html i="phone" %}
-    {% include icon.html i="email" %}
-    {% include icon.html i="facebook" %}
-    {% include icon.html i="twitter" %}
+  <span class="artist-card-badge {{ artist.genre | slugify | prepend: "bg-genre-" }}">
+    {% if artist.email %}{% include icon.html i="email" %}{% endif %}
+    {% if artist.phone %}{% include icon.html i="phone" %}{% endif %}
+    {% if artist.facebook %}{% include icon.html i="facebook" %}{% endif %}
+    {% if artist.twitter %}{% include icon.html i="twitter" %}{% endif %}
   </span>
 </div>
