--- a/css/main.scss
+++ b/css/main.scss
@@ -126,7 +126,11 @@ body {
   &:last-child  { border-bottom: 0; }
 }
 
-.artist-card { position: relative; }
+.artist-card {
+  position: relative;
+  margin-bottom: $grid-gutter-width;
+}
+
 .artist-card-name {
   position: absolute;
   bottom: 0;
@@ -135,16 +139,18 @@ body {
   background: rgba($gray-lightest, .7);
   color: $gray-dark;
 }
+
 .artist-card-img {
   border-radius: $card-border-radius;
 }
+
 .artist-card-badge {
   position: absolute;
   top: -10px;
   right: -10px;
   font-size: 1.25rem;
   line-height: .75;
-  padding: .5rem;
+  padding: .75rem;
   border-radius: 1.25rem;
   color: white;
 
