--- a/_includes/filter-card.html
+++ b/_includes/filter-card.html
@@ -1,4 +1,3 @@
-{% assign count = 0 %}
 <div class="card filter-card">
   <ul class="list-group list-group-flush">
     <li class="list-group-item">
@@ -7,14 +6,13 @@
       </h3>
     </li>
     {% for item in include.items %}
-      {% assign count = count | plus: 1 %}
       <li class="list-group-item">
         <label class="custom-control custom-checkbox">
           <input type="checkbox" class="custom-control-input">
           <span class="custom-control-indicator"></span>
           <span class="custom-control-description">
             {% if include.items == site.data.genres %}
-              <span class="pull-xs-right {{ count | prepend: "text-genre-" }}">
+              <span class="pull-xs-right {{ item | slugify | prepend: "text-genre-" }}">
                 {% include icon.html i="music" %}
               </span>
             {% endif %}
