--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-dark navbar-full bg-inverse text-xs-center">
-  <a href="{{ "/" | site.baseurl }}" class="h1 m-b-0">{% include tocaki-logo.html %}</a>
+  <a href="{{ "/" | site.baseurl }}" class="navbar-brand m-b-0">{% include tocaki-logo.html %}</a>
 </nav>
