--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{{ site.title | escape }}</title>
-  <meta name="description" content="{{ site.description }}">
+  <title>{{ include.title | escape }}</title>
+  <meta name="description" content="{{ include.description }}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <script type="text/javascript" src="{{ "/javascript/svgxuse.min.js" }}"></script>
