--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  {% include head.html %}
+  {% include head.html title=site.title description=site.description %}
 
   <body>
     {% include header.html %}
-    
+
     {{ content }}
 
     {% include footer.html %}
