Adds border to profile image

--- a/css/main.scss
+++ b/css/main.scss
@@ -165,3 +165,7 @@ body {
 
 .artist-profile-name,
 .artist-profile-city { font-weight: 100; }
+
+.artist-profile-img {
+  border-color: inherit;
+}
