--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -9,8 +9,8 @@
     <div class="p-y-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <img src="{{ page.slug | append: ".jpg" | prepend: "/images/artists/" | prepend: site.baseurl }}" alt="{{ page.name }}" class="img-fluid img-circle m-x-auto m-b-1">
+          <div class="col-md-3 text-primary">
+            <img src="{{ page.slug | append: ".jpg" | prepend: "/images/artists/" | prepend: site.baseurl }}" alt="{{ page.name }}" class="artist-profile-img img-fluid img-thumbnail img-circle m-x-auto m-b-1">
           </div>
           <div class="col-md-9">
             <h1 class="display-2 artist-profile-name">{{ page.name }}</h1>
