Make genres a collection

--- a/_includes/filter-card.html
+++ b/_includes/filter-card.html
@@ -11,12 +11,14 @@
           <input type="checkbox" class="custom-control-input">
           <span class="custom-control-indicator"></span>
           <span class="custom-control-description">
-            {% if include.items == site.data.genres %}
-              <span class="pull-xs-right {{ item | slugify | prepend: "text-genre-" }}">
+            {% if include.items == site.genres %}
+              <span class="pull-xs-right {{ item.slug | prepend: "text-genre-" }}">
                 {% include icon.html i="music" %}
               </span>
+              {{ item.title }}
+            {% else %}
+              {{ item }}
             {% endif %}
-            {{ item }}
           </span>
         </label>
       </li>
