--- a/_includes/artist-card.html
+++ b/_includes/artist-card.html
@@ -1,6 +1,6 @@
 {% assign artist = include.artist %}
 {% assign genre = site.genres | where: 'title', artist.genre | first %}
-<div class="artist-card">
+<div class="artist-card" data-genre="{{ genre.title }}" data-city="{{ artist.city }}" data-type="{{ artist.type }}">
   <a href="{{ artist.url }}">
     <img class="artist-card-img img-fluid" src="{{ artist.slug | append: ".jpg" | prepend: "/images/artists/" | prepend: site.baseurl }}" alt="{{ artist.name }}">
     <span class="artist-card-name text-xs-center m-b-0 p-y-1">{{ artist.name }}</span>
