--- a/_includes/filter-card.html
+++ b/_includes/filter-card.html
@@ -6,19 +6,22 @@
       </h3>
     </li>
     {% for item in include.items %}
+      {% if include.items == site.genres %}
+        {% assign value = item.title %}
+      {% else %}
+        {% assign value = item %}
+      {% endif %}
       <li class="list-group-item">
         <label class="custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input">
+          <input type="checkbox" name="{{ include.name | append: "[]" }}" value="{{ value }}" class="custom-control-input">
           <span class="custom-control-indicator"></span>
           <span class="custom-control-description">
             {% if include.items == site.genres %}
               <span class="pull-xs-right {{ item.slug | prepend: "text-genre-" }}">
                 {% include icon.html i="music" %}
               </span>
-              {{ item.title }}
-            {% else %}
-              {{ item }}
             {% endif %}
+            {{ value }}
           </span>
         </label>
       </li>
