--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,7 @@
   <meta name="description" content="{{ include.description }}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <script type="text/javascript" src="{{ "/javascript/svgxuse.min.js" }}"></script>
+  <script src="{{ "/javascript/jquery.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/javascript/svgxuse.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/javascript/app.js" | prepend: site.baseurl }}"></script>
 </head>
