Convert genres to data file

--- a/_includes/artist-card.html
+++ b/_includes/artist-card.html
@@ -1,11 +1,11 @@
 {% assign artist = include.artist %}
-{% assign genre = site.genres | where: 'title', artist.genre | first %}
+{% assign genre = site.data.genres | where: 'title', artist.genre | first %}
 <div class="artist-card" data-genre="{{ genre.title }}" data-city="{{ artist.city }}" data-type="{{ artist.type }}">
   <a href="{{ artist.url }}">
     <img class="artist-card-img img-fluid" src="{{ artist.slug | append: ".jpg" | prepend: "/images/artists/" | prepend: site.baseurl }}" alt="{{ artist.name }}">
     <span class="artist-card-name text-xs-center m-b-0 p-y-1">{{ artist.name }}</span>
   </a>
-  <span class="artist-card-badge {{ genre.slug | slugify | prepend: "bg-genre-" }}">
+  <span class="artist-card-badge {{ genre.title | slugify | prepend: "bg-genre-" }}">
     {% if artist.email %}{% include icon.html i="email" %}{% endif %}
     {% if artist.phone %}{% include icon.html i="phone" %}{% endif %}
     {% if artist.facebook %}{% include icon.html i="facebook" %}{% endif %}
