--- a/_includes/genres.scss
+++ b/_includes/genres.scss
@@ -1,4 +1,4 @@
-{% for genre in site.genres %}
-.text-genre-{{ genre.slug }} { color: {{ genre.color }}; }
-.bg-genre-{{ genre.slug }}   { background: {{ genre.color }}; }
+{% for genre in site.data.genres %}
+.text-genre-{{ genre.title | slugify }} { color: {{ genre.color | prepend: '#' }}; }
+.bg-genre-{{ genre.title | slugify }}   { background: {{ genre.color | prepend: '#' }}; }
 {% endfor %}
