--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,13 @@
   <title>{{ include.title | escape }}</title>
   <meta name="description" content="{{ include.description }}">
 
+  {% if page.layout == "profile" %}
+    {% assign image = page.slug | append: ".jpg" | prepend: "/images/artists/" | prepend: site.baseurl | prepend: site.url %}
+    {% assign url = page.url | prepend: site.baseurl | prepend: site.url %}
+    {% include seo/twitter-card.html title=page.name description=include.description image=image %}
+    {% include seo/open-graph.html title=page.name url=url image=image %}
+  {% endif %}
+
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <script src="{{ "/javascript/jquery.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/javascript/svgxuse.min.js" | prepend: site.baseurl }}"></script>
