--- a/css/main.scss
+++ b/css/main.scss
@@ -55,117 +55,9 @@ $card-border-radius: 9px;
 
 {% include genres.scss %}
 @import "bootstrap/bootstrap";
-
-body {
-  font-weight: 300;
-}
-
-.icon {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  position: relative;
-  top: 0.1em;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
-
-  &.tocaki-fill {
-    width: 1.0986328125em;
-  }
-
-  .display-1 &,
-  .display-2 &,
-  .display-3 &,
-  .display-4 & {
-    top: 0;
-  }
-}
-
-.hero {
-  background-image:
-    linear-gradient(rgba($gray-lightest, .24), rgba($gray-lightest, .24)),
-    url("/images/bg.jpg");
-}
-
-.site-footer {
-  background-image:
-    linear-gradient(rgba($gray-dark, .8), rgba($gray-dark, .8)),
-    url("/images/bg2.jpg");
-}
-
-.navbar-absolute {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-}
-
-.navbar-brand {
-  float: none;
-  margin-right: 0;
-  font-size: 3.5rem;
-  line-height: 1;
-}
-
-.text-deco-none { text-decoration: none !important; }
-
-.bb-1 { border-bottom: $border-width solid; }
-.bb-2 { border-bottom: $border-width * 2 solid; }
-.bb-3 { border-bottom: $border-width * 3 solid; }
-
-.bg-cover-fixed {
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-.filter-card .list-group-item {
-  border-right: 0;
-  border-left: 0;
-
-  &:first-child { border-top:    0; }
-  &:last-child  { border-bottom: 0; }
-}
-
-.artist-card {
-  position: relative;
-  margin-bottom: $grid-gutter-width;
-}
-
-.artist-card-name {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background: rgba($gray-lightest, .7);
-  color: $gray-dark;
-}
-
-.artist-card-img {
-  border-radius: $card-border-radius;
-}
-
-.artist-card-badge {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  font-size: 1.25rem;
-  line-height: .75;
-  padding: .75rem;
-  border-radius: 1.25rem;
-  color: white;
-
-  .icon {
-    margin-right: .25rem;
-
-    &:last-child { margin-right: 0; }
-  }
-}
-
-.artist-profile-name,
-.artist-profile-city { font-weight: 100; }
-
-.artist-profile-img {
-  border-color: inherit;
-}
+@import "base";
+@import "theme";
+@import "utils";
+@import "filter-card";
+@import "artist-card";
+@import "artist-profile";
