Change artist name to title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   {% if page.layout == 'profile' %}
-    <title>{{ page.name | append: ' | ' | append: site.title | escape }}</title>
+    <title>{{ page.title | append: ' | ' | append: site.title | escape }}</title>
   {% else %}
     <title>{{ page.title | default: site.title | escape }}</title>
   {% endif %}
@@ -15,8 +15,8 @@
   {% if page.layout == "profile" %}
     {% assign image = page.image | prepend: site.baseurl | prepend: site.url %}
     {% assign url = page.url | prepend: site.baseurl | prepend: site.url %}
-    {% include seo/twitter-card.html title=page.name description=description image=image %}
-    {% include seo/open-graph.html title=page.name url=url image=image %}
+    {% include seo/twitter-card.html title=page.title description=description image=image %}
+    {% include seo/open-graph.html title=page.title url=url image=image %}
   {% endif %}
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
