--- a/_includes/artist-card.html
+++ b/_includes/artist-card.html
@@ -1,7 +1,7 @@
 {% assign artist = include.artist %}
 {% assign genre = site.data.genres | where: 'title', artist.genre | first %}
 <div class="artist-card" data-genre="{{ genre.title }}" data-city="{{ artist.city }}" data-type="{{ artist.type }}">
-  <a href="{{ artist.url }}">
+  <a href="{{ artist.url | prepend: site.baseurl }}">
     <img class="artist-card-img img-fluid" src="{{ artist.image | prepend: site.baseurl }}" alt="{{ artist.title }}">
     <span class="artist-card-name text-xs-center m-b-0 p-y-1">{{ artist.title }}</span>
   </a>
