--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -1,13 +1,13 @@
 .hero {
   background-image:
     linear-gradient(rgba($gray-lightest, .24), rgba($gray-lightest, .24)),
-    url("/images/bg.jpg");
+    url("../images/bg.jpg");
 }
 
 .site-footer {
   background-image:
     linear-gradient(rgba($gray-dark, .8), rgba($gray-dark, .8)),
-    url("/images/bg2.jpg");
+    url("../images/bg2.jpg");
 }
 
 .navbar-absolute {
