--- a/_includes/artist-card.html
+++ b/_includes/artist-card.html
@@ -1,11 +1,10 @@
 {% assign artist = include.artist %}
-{% assign genre = site.data.genres | where: 'title', artist.genre | first %}
-<div class="artist-card" data-genre="{{ genre.title }}" data-city="{{ artist.city }}" data-type="{{ artist.type }}">
+<div class="artist-card" data-genre="{{ artist.genre }}" data-city="{{ artist.city }}" data-type="{{ artist.type }}">
   <a href="{{ artist.url | prepend: site.baseurl }}">
     <img class="artist-card-img img-fluid" src="{{ artist.image | prepend: site.baseurl }}" alt="{{ artist.title }}">
     <span class="artist-card-name text-xs-center m-b-0 p-y-1">{{ artist.title }}</span>
   </a>
-  <span class="artist-card-badge {{ genre.title | slugify | prepend: "bg-genre-" }}">
+  <span class="artist-card-badge bg-primary">
     {% if artist.email %}{% include icon.html i="email" %}{% endif %}
     {% if artist.phone %}{% include icon.html i="phone" %}{% endif %}
     {% if artist.facebook %}{% include icon.html i="facebook" %}{% endif %}
