--- a/_includes/filter-card.html
+++ b/_includes/filter-card.html
@@ -6,23 +6,11 @@
       </h3>
     </li>
     {% for item in include.items %}
-      {% if include.items == site.data.genres %}
-        {% assign value = item.title %}
-      {% else %}
-        {% assign value = item %}
-      {% endif %}
       <li class="list-group-item">
         <label class="custom-control custom-checkbox">
-          <input type="checkbox" name="{{ include.name | append: "[]" }}" value="{{ value }}" class="custom-control-input">
+          <input type="checkbox" name="{{ include.name | append: "[]" }}" value="{{ item }}" class="custom-control-input">
           <span class="custom-control-indicator"></span>
-          <span class="custom-control-description">
-            {% if include.items == site.data.genres %}
-              <span class="pull-xs-right {{ item.title | slugify | prepend: "text-genre-" }}">
-                {% include icon.html i="music" %}
-              </span>
-            {% endif %}
-            {{ value }}
-          </span>
+          <span class="custom-control-description">{{ item }}</span>
         </label>
       </li>
     {% endfor %}
