Fix design issues

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -1,20 +1,11 @@
 .hero {
   background-image:
-    linear-gradient(rgba($gray-lightest, .24), rgba($gray-lightest, .24)),
+    linear-gradient(rgba($gray-dark, .8), rgba($gray-dark, .8)),
     url("../images/bg.jpg");
 }
 
-.site-footer {
-  background-image:
-    linear-gradient(rgba($gray-dark, .8), rgba($gray-dark, .8)),
-    url("../images/bg2.jpg");
-}
-
-.navbar-absolute {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
+.navbar.bg-inverse {
+  background-color: $gray-darkest !important;
 }
 
 .navbar-brand {
