--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer bg-inverse bg-cover-fixed text-xs-center p-y-5">
+<footer class="hero bg-inverse bg-cover-fixed text-xs-center p-y-5">
   <div class="container">
     <h2 class="display-2">{% include tocaki-logo.html %}</h2>
     <p>&copy; 2016 {{ site.title }} &mdash; <a href="{{ site.email | prepend: "mailto:" }}">{{ site.email }}</a></p>
