--- a/_includes/artist-card.html
+++ b/_includes/artist-card.html
@@ -1,5 +1,5 @@
 {% assign artist = include.artist %}
-<div class="artist-card" data-genre="{{ artist.genre }}" data-city="{{ artist.city }}" data-type="{{ artist.type }}">
+<div class="artist-card" data-genre="{{ artist.genre | join: ", " }}" data-city="{{ artist.city }}" data-type="{{ artist.type }}">
   <a href="{{ artist.url | prepend: site.baseurl }}">
     <img class="artist-card-img img-fluid" src="{{ artist.image | prepend: site.baseurl }}" alt="{{ artist.title }}">
     <span class="artist-card-name text-xs-center m-b-0 p-y-1">{{ artist.title }}</span>
