Fix profile for mobile

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -4,21 +4,23 @@ layout: default
 
 <div class="p-y-3">
   <div class="container">
-    <div class="row">
-      <div class="col-md-3 text-primary">
+    <div class="row text-xs-center text-lg-left">
+      <div class="col-lg-3 text-primary">
         <img src="{{ page.image | prepend: site.baseurl }}" alt="{{ page.title }}" class="artist-profile-img img-fluid img-thumbnail img-circle m-x-auto m-b-1">
       </div>
-      <div class="col-md-9">
+      <div class="col-lg-9">
         <h1 class="display-2 artist-profile-name">{{ page.title }}</h1>
         <p class="h2 text-muted m-b-2 artist-profile-city">
           <span class="text-primary">{% include icon.html i="marker" %}</span> {{ page.city }}
         </p>
         <p>
-          <a href="{{ page.email | prepend: "mailto:" }}" class="btn btn-lg btn-primary pull-xs-left">
-            <span class="m-r-1">{% include icon.html i="email-fill" %}</span>Enviar mensagem
-          </a>
+          <p class="col-lg-9">
+            <a href="{{ page.email | prepend: "mailto:" }}" class="btn btn-lg btn-primary">
+              <span class="m-r-1">{% include icon.html i="email-fill" %}</span>Enviar mensagem
+            </a>
+          </p>
           {% if page.facebook or page.twitter or page.gplus %}
-            <div class="btn-group btn-group-lg pull-xs-right" role="group">
+            <div class="btn-group btn-group-lg col-lg-3" role="group">
               {% if page.facebook %}
                 <a href="{{ page.facebook | prepend: "https://facebook.com/" }}" target="_blank" class="btn btn-outline-primary">{% include icon.html i="facebook" %}</a>
               {% endif %}
@@ -37,8 +39,8 @@ layout: default
     <hr>
 
     <div class="row p-y-1">
-      <div class="col-md-8">{{ content }}</div>
-      <div class="col-md-4">
+      <div class="col-lg-8">{{ content }}</div>
+      <div class="col-lg-4">
         <div class="list-group">
           <a href="{{ page.portfolio }}" target="_blank" class="list-group-item list-group-item-action active">
             <span class="m-r-1">{% include icon.html i="music" %}</span>Ouça {{ page.title }}
